Fix being able to set default TCP port for command-line utilities by using MYSQL_TCP_PORT variable. (Bug #5792)

client/mysql.cc:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().
client/mysqladmin.cc:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().
client/mysqlbinlog.cc:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().
client/mysqlcheck.c:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().
client/mysqldump.c:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().
client/mysqlimport.c:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().
client/mysqlshow.c:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().
client/mysqltest.c:
  Set default port to 0 so MYSQL_TCP_PORT is handled by mysql_server_init().